# AiLab

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
cmd/agentctl/: main.go
cmd/api/: main.go
cmd/billing/: main.go
cmd/builder/: main.go
cmd/controller/: main.go
cmd/gateway/: main.go
cmd/janitor/: main.go
cmd/triggers/: main.go
docs/: DEPLOY.md  PLAN.md
internal/agents/: deploy_handlers.go  handlers.go  repo.go
internal/audit/: export.go  handlers.go  repo.go
internal/auth/: auth.go  cors.go  workos.go
internal/billing/: orb.go  shipper.go
internal/builds/: handlers.go  repo.go
internal/config/: config.go
internal/cryptobox/: crypto.go  crypto_test.go
internal/db/: db.go
internal/eventbus/: nats.go
internal/kube/: client.go
internal/loki/: client.go
internal/runs/: controller.go  deployment_consumer.go  deployment_controller.go  dispatch_consumer.go  events_handler.go  events_pubsub.go  handlers.go  logs.go  quota.go  repo.go  status_consumer.go  types.go
internal/secrets/: handlers.go  materialize.go  (+1 more)
migrations/: 001_init.sql  002_triggers_usage_builds.sql  003_webhook_secret_rename.sql  004_secrets.sql  005_audit.sql  006_usage_shipper.sql  007_audit_export_state.sql
scripts/: docker-compose.dev.yml  kind-config.yaml  smoketest.sh  workos-webhook-test.sh
sdks/python/: README.md  pyproject.toml
sdks/python/ailab/: __init__.py  client.py
sdks/python/tests/: test_client.py
web/: next.config.mjs  package-lock.json  package.json
(+75 files in other folders)
