[project]
name = "ailab"
version = "0.1.0"
description = "Python client for the AiLab hosted agent platform."
requires-python = ">=3.10"
authors = [{ name = "AiLab Platform" }]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ailab*"]
